--- a/metadata.yaml
+++ b/metadata.yaml
@@ -50,6 +50,7 @@ subjects:
 - !lcsh 'Mice -- Juvenile fiction'
 - !lcsh 'Kittens -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The Story of Miss Moppet
 url: http://www.gutenberg.org/ebooks/14848
 wikipedia:
